# rust-fly.io-demo

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
